# demo_ros

./: CMakeLists.txt  README.md  package.xml
calib/: depth_calib.yaml  rgb_calib.yaml
launch/: kinect.launch
rviz/: demo.rviz
src/: plane_segmentation.cpp
