<?xml version="1.0"?>
<package>
  <name>demo_ros</name>
  <version>1.0.0</version>
  <description>The demo_ros package</description>
  <maintainer email="jpmercier87@gmail.com">jp</maintainer>
  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>rospy</run_depend>

  <export>

  </export>
</package>
